Lots of fixes and new models

--- a/static/index.html
+++ b/static/index.html
@@ -150,7 +150,7 @@
       <label for="humid">Humidity</label><input readonly="readonly" id="humid"></input><br/>
       <label for="datetime">Last updated date/time</label><input readonl="readonly" id="datetime"></input><br/>
       <button title="Refresh temperature/humidity" class="button" type="button" onClick="getTempHumidity()">&#8635;</button>
-      <button title="Refresh temperature/humidity" class="button" type="button" onClick="calibrateThermometer()">&#128208;</button><br/>
+      <button title="Calibrate Thermometer" class="button" type="button" onClick="calibrateThermometer()">&#128208;</button><br/>
     </div>
   </body>
 
